# python-fundamentals

./: .flake8  .gitignore  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlintignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  skills.md
.claude/: CLAUDE.md
.clinerules/: AGENTS.md  README.md  agentic-core-context.md
.clinerules/agents/: docs-originality-review.md  python-practice-code.md  session-roadmap-review.md
.clinerules/rules/: 01-repository-purpose.md  04-quality-assurance.md  06-primary-directives.md  07-reference-docs-rules.md  08-file-naming-conventions.md  09-copilot-instructions-extract.md  README.md
.clinerules/skills/: README.md  agentic-engineering.md  demo-companions.md  docs-verification.md  e2e-testing.md  workspace-review.md
.clinerules/workflows/: session-roadmap-review.md  workspace-review.md
.copilot/: settings.json
.cursor/agents/: docs-verifier.md  python-practice-code.md  session-content.md
.cursor/rules/: 01_educational-content-rules.mdc  02_repository-structure.mdc  03_quality-assurance.mdc  04_markdown-standards.mdc  05_primary-directives.mdc  06_cross-level-integration.mdc  README.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation_improvement.md  (+1 more)
.opencode/: README.md
docs/: 01_Python-Fundamentals-MasterPlan.md  PythonFileTemplates.md  RepositoryStructure.md
scripts/: docs-links.ps1  docs-lint.ps1  generate_level_plans.py
tests/: test_curriculum_smoke.py  test_mini_projects.py
(+274 files in other folders)
